samples/_failures_safe/1761207553_63b762_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2df8de01.c: In function ‘main’:
./samples/SAFE/__tmp_2df8de01.c:197:5: error: expected expression at end of input
  197 |     int token_count = tokenize(input, tokens,
      |     ^~~
./samples/SAFE/__tmp_2df8de01.c:197:5: error: expected declaration or statement at end of input
